# rust-wasm

./: .env  Cargo.toml  README.md  README_CN.md
db/: docker-compose.yml
db/init.d/: courses.sql  teachers.sql
wasm-client/: .gitignore  Cargo.toml  LICENSE_MIT
wasm-client/src/: errors.rs  lib.rs
wasm-client/src/models/: course.rs
wasm-client/www/: index.html  index.js  package-lock.json  package.json
webapp/: .env  Cargo.toml
webapp/src/: errors.rs  handlers.rs  models.rs
webapp/static/: teachers.html
webservice/: Cargo.toml
webservice/src/: errors.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handles/: course.rs  general.rs  mod.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
